# sodakit

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
agent_logs/: INDEX.md  agent_claude_code_2026-03-28.logs  agent_claude_code_2026-03-29.logs
more_socrata/: helper.py
src/more_socrata/: __init__.py  api.py  exceptions.py
src/more_socrata/utils/: data_loader.py  data_version.py  data_writer.py  log_helper.py  response.py  strings.py
src/sodakit/: __init__.py  api.py  cli.py  exceptions.py
src/sodakit/utils/: data_loader.py  data_version.py  data_writer.py  log_helper.py  response.py  strings.py
tests/: conftest.py  test_api.py  test_cli.py  test_client.py  test_data_loader.py  test_data_version.py  test_data_writer.py  test_log_helper.py  test_response.py  test_strings.py
