[project]
name = "more-socrata"
version = "0.1.0"
description = "Python library that builds upon socrata library"
authors = [
    {name = "Dev Anand Anbarasu",email = "anand26dev@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "sodapy (>=2.2.0,<3.0.0)",
    "shapely (>=2.1.1,<3.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "pdfplumber (>=0.11.7,<0.12.0)",
    "xlrd (>=2.0.2,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
